Refactor code to improve performance and readability

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <br>
     <a href="palindrome.html" class="link" style="margin-left: 10px;">palindrome</a>
     <br>
-    <a href="palindrome-str.html" class="link" style="margin-left: 10px;">palindrome-string</a>
+    <a href="palindrome-str.htm" class="link" style="margin-left: 10px;">palindrome-string</a>
 </body>
 </html>
